# eta-bug

./: ChangeLog.md  Config.dump-cg-trace  Config.dump-stg  README.md  eta-aeson-failure.cabal  shake.cabal
src/: Main.hs
src/General/: FileLock.hs
