name:                eta-aeson-failure
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable eta-aeson-failure
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
